--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,14 @@
   <title>Data Screen</title>
 
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta name="description" content="Welcome to the Ionic PWA Toolkit. You can use this starter to build fast PWAs using Ionic and Stencil!">
+  <meta name="description" content="Data Screen">
   <meta name="theme-color" content="#16161d">
 
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
 
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-title" content="Ionic PWA">
+  <meta name="apple-mobile-web-app-title" content="Data Screen">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
   <meta http-equiv="x-ua-compatible" content="IE=Edge">
@@ -28,9 +28,7 @@
 </head>
 
 <body  class="purple-theme">
-
   <app-root></app-root>
-
 </body>
 
 </html>
