--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
   <link rel="manifest" href="/manifest.json">
 </head>
 
-<body  class="purple-theme">
+<body  class="purple">
   <app-root></app-root>
 </body>
 
