--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
 
   <script type="module" src="/build/app.esm.js"></script>
   <script nomodule src="/build/app.js"></script>
+  <script src="./assets/iconfont/iconfont.js"></script>
 
   <link href="/build/app.css" rel="stylesheet">
   <link rel="apple-touch-icon" sizes="180x180" href="/assets/icon/apple-touch-icon.png">
